[package]
name = "hello-rust-dsp-fx"
version = "0.1.0"
authors = ["thai <maot.tm@gmail.com>"]
description = "Example of calling DSP functions in Rust from JS"
license = "MIT/Apache-2.0"
repository = "https://github.com/thaiMao/audio_worklet_shared_array_buffer_pattern"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"